BLDC driving is working well

--- a/platformio.ini
+++ b/platformio.ini
@@ -28,6 +28,7 @@ build_flags =
     -DUSBD_USE_CDC
     -DUSBCON
     -DHAL_CORDIC_MODULE_ENABLED
+    -DHAL_LPTIM_MODULE_ENABLED
 
 lib_deps =
     adafruit/Adafruit NeoPixel@^1.11.0
